--- a/_src/_footer.html
+++ b/_src/_footer.html
@@ -154,7 +154,7 @@
 <div class="modal-text">
 	<div class="modal-wrap">
 		<div class="img-wrap">
-			<img src="/img/circle-load.svg" alt="" srcset="">
+			<img src="img/circle-load.svg" alt="" srcset="">
 		</div>
 		<p>
 			ВЛІЗАЄМО В НЕДРИ КОДУ
